--- a/Toast-notification/style.css
+++ b/Toast-notification/style.css
@@ -13,6 +13,14 @@ body {
     min-height: 100vh;
 }
 
+button {
+    background-color: darkred;
+    color: #fff;
+    padding: 1rem;
+    border-radius: 5px;
+    border: none;
+}
+
  #container {
     position: fixed;
     bottom: 10px;
